--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,14 +2,25 @@
   "dependencies": {
     "com.apple.unityplugin.core": "file:/Users/ondrejrehacek/Downloads/AppleUnityPlugins-main/com.apple.unityplugin.core-1.0.5.tgz",
     "com.apple.unityplugin.gamekit": "file:/Users/ondrejrehacek/Downloads/AppleUnityPlugins-main/com.apple.unityplugin.gamekit-1.0.4.tgz",
+    "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.ads": "4.4.2",
+    "com.unity.ai.navigation": "1.1.5",
+    "com.unity.analytics": "3.8.1",
     "com.unity.collab-proxy": "2.3.1",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.ide.rider": "3.0.26",
+    "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.ide.vscode": "1.2.5",
     "com.unity.mobile.android-logcat": "1.4.0",
+    "com.unity.purchasing": "4.9.3",
     "com.unity.services.authentication": "3.3.0",
+    "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.1",
+    "com.unity.xr.legacyinputhelpers": "2.1.10",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
