--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,10 @@ jobs:
       - if: matrix.targetPlatform == 'iOS'
         name: Setup Apple Developer Account
         run: |
-          mkdir -p ~/Library/Developer/Xcode/UserData
+          # Create Xcode settings directory
+          mkdir -p ~/Library/Developer/Xcode/UserData/IDEWorkspaceSharedSettings.xcuserdatad
+          
+          # Create settings file
           echo '<?xml version="1.0" encoding="UTF-8"?>
           <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
           <plist version="1.0">
