--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,6 +91,12 @@ jobs:
           echo "Available identities after setup:"
           security find-identity -v -p codesigning
           
+          # Verify we have a distribution certificate
+          if ! security find-identity -v -p codesigning | grep -q "Apple Distribution"; then
+            echo "Error: No Apple Distribution certificate found. Please make sure you're using a distribution certificate for TestFlight uploads."
+            exit 1
+          fi
+          
           # Clean up certificate file
           rm -f cert.p12
       - uses: game-ci/unity-builder@v4
