--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,6 +99,51 @@ jobs:
           
           # Clean up certificate file
           rm -f cert.p12
+          
+          # Configure Xcode with Apple Developer account
+          mkdir -p ~/Library/Developer/Xcode/UserData
+          echo '<?xml version="1.0" encoding="UTF-8"?>
+          <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+          <plist version="1.0">
+          <dict>
+              <key>IDEFirstLaunchExperienceCompleted</key>
+              <true/>
+              <key>IDELastMacOSXSDK</key>
+              <string>14.4</string>
+              <key>IDELastXcodeSystemLogLocation</key>
+              <string>/Users/runner/Library/Developer/Xcode/DerivedData/Unity-iPhone-crjxlrgppfabfnenstxvmismtxgy/Logs/Debug</string>
+              <key>IDEWorkspaceSharedSettings_AutocreateContextsIfNeeded</key>
+              <false/>
+              <key>AppleIDAccounts</key>
+              <array>
+                  <dict>
+                      <key>accountDescription</key>
+                      <string>${{ secrets.APPLE_ID }}</string>
+                      <key>accountName</key>
+                      <string>${{ secrets.APPLE_ID }}</string>
+                      <key>accountType</key>
+                      <string>AppleID</string>
+                      <key>identifier</key>
+                      <string>${{ secrets.APPSTORE_ISSUER_ID }}</string>
+                      <key>teamID</key>
+                      <string>${{ secrets.APPLE_TEAM_ID }}</string>
+                  </dict>
+              </array>
+          </dict>
+          </plist>' > ~/Library/Developer/Xcode/UserData/IDEWorkspaceSharedSettings.xcuserdatad/WorkspaceSettings.xcsettings
+          
+          # Create Xcode project settings
+          mkdir -p ~/Library/Developer/Xcode/UserData/IDEWorkspaceSharedSettings.xcuserdatad
+          echo '<?xml version="1.0" encoding="UTF-8"?>
+          <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+          <plist version="1.0">
+          <dict>
+              <key>PreviewsEnabled</key>
+              <false/>
+              <key>IDEWorkspaceSharedSettings_AutocreateContextsIfNeeded</key>
+              <false/>
+          </dict>
+          </plist>' > ~/Library/Developer/Xcode/UserData/IDEWorkspaceSharedSettings.xcuserdatad/WorkspaceSettings.xcsettings
       - uses: game-ci/unity-builder@v4
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
