--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -100,59 +100,14 @@ jobs:
           echo "=== Provisioning Profile Details ==="
           security cms -D -i ~/Library/MobileDevice/Provisioning\ Profiles/*.mobileprovision | plutil -p -
           
-          # Extract bundle ID from provisioning profile
-          PROFILE_BUNDLE_ID=$(security cms -D -i ~/Library/MobileDevice/Provisioning\ Profiles/*.mobileprovision | plutil -extract Entitlements.application-identifier raw -)
-          echo "Provisioning profile bundle ID: $PROFILE_BUNDLE_ID"
-          
-          # Get the actual bundle ID (remove team prefix)
-          BUNDLE_ID=$(echo "$PROFILE_BUNDLE_ID" | sed 's/^DB5KZDZYT5\.//')
-          echo "Extracted bundle ID: $BUNDLE_ID"
-          
-          # Check and update the project bundle ID if needed
-          echo "=== Checking Unity Project Bundle ID ==="
-          CURRENT_BUNDLE_ID=$(xcodebuild -project Unity-iPhone.xcodeproj -target Unity-iPhone -showBuildSettings | grep PRODUCT_BUNDLE_IDENTIFIER | awk '{print $3}')
-          echo "Current project bundle ID: $CURRENT_BUNDLE_ID"
-          
-          if [ "$CURRENT_BUNDLE_ID" != "$BUNDLE_ID" ]; then
-            echo "Bundle ID mismatch! Updating project to use: $BUNDLE_ID"
-            sed -i '' "s/PRODUCT_BUNDLE_IDENTIFIER = .*/PRODUCT_BUNDLE_IDENTIFIER = $BUNDLE_ID;/g" Unity-iPhone.xcodeproj/project.pbxproj
-          fi
-          
-          # Set up for Automatic Signing
-          # For the main Unity-iPhone target:
-          # Modify properties within the Release configuration block for Unity-iPhone
-          sed -i '' -e "/Begin XCBuildConfiguration section/,/End XCBuildConfiguration section/ { /name = Release;/,$!b /isa = XCBuildConfiguration;/,$!b /buildSettings = {/,/};/ { \
-          s/CODE_SIGN_STYLE = Manual;/CODE_SIGN_STYLE = Automatic;/g; \
-          s/CODE_SIGN_STYLE = \"Manual\";/CODE_SIGN_STYLE = Automatic;/g; \
-          s/PROVISIONING_PROFILE_SPECIFIER = \".*\";/PROVISIONING_PROFILE_SPECIFIER = \"\";/g; \
-          s/PROVISIONING_PROFILE_SPECIFIER = .*;/PROVISIONING_PROFILE_SPECIFIER = \"\";/g; \
-          s/CODE_SIGN_IDENTITY = \".*\";/CODE_SIGN_IDENTITY = \"Apple Distribution\";/g; \
-          s/CODE_SIGN_IDENTITY = .*;/CODE_SIGN_IDENTITY = \"Apple Distribution\";/g; \
-          s/DEVELOPMENT_TEAM = \".*\";/DEVELOPMENT_TEAM = DB5KZDZYT5;/g; \
-          s/DEVELOPMENT_TEAM = .*;/DEVELOPMENT_TEAM = DB5KZDZYT5;/g; \
-          } }" Unity-iPhone.xcodeproj/project.pbxproj
-          
-          # For the UnityFramework target:
-          # Modify properties within the Release configuration block for UnityFramework
-          sed -i '' -e "/Begin XCBuildConfiguration section/,/End XCBuildConfiguration section/ { /name = Release;/,$!b /isa = XCBuildConfiguration;/,$!b /buildSettings = {/,/};/ { \
-          s/CODE_SIGN_STYLE = Manual;/CODE_SIGN_STYLE = Automatic;/g; \
-          s/CODE_SIGN_STYLE = \"Manual\";/CODE_SIGN_STYLE = Automatic;/g; \
-          s/PROVISIONING_PROFILE_SPECIFIER = \".*\";/PROVISIONING_PROFILE_SPECIFIER = \"\";/g; \
-          s/PROVISIONING_PROFILE_SPECIFIER = .*;/PROVISIONING_PROFILE_SPECIFIER = \"\";/g; \
-          s/CODE_SIGN_IDENTITY = \".*\";/CODE_SIGN_IDENTITY = \"Apple Developer\";/g; \
-          s/CODE_SIGN_IDENTITY = .*;/CODE_SIGN_IDENTITY = \"Apple Developer\";/g; \
-          s/DEVELOPMENT_TEAM = \".*\";/DEVELOPMENT_TEAM = DB5KZDZYT5;/g; \
-          s/DEVELOPMENT_TEAM = .*;/DEVELOPMENT_TEAM = DB5KZDZYT5;/g; \
-          } }" Unity-iPhone.xcodeproj/project.pbxproj
-          
-          # Verify project settings
-          echo "=== Project (Unity-iPhone) Build Settings (Post-modification for Automatic Signing) ==="
+          # Verify project settings (still useful to see what Xcode resolves)
+          echo "=== Project (Unity-iPhone) Build Settings (Using unmodified project settings from Unity build) ==="
           xcodebuild -project Unity-iPhone.xcodeproj -target Unity-iPhone -showBuildSettings | grep -E "(DEVELOPMENT_TEAM|CODE_SIGN|PROVISIONING_PROFILE)"
-          echo "=== UnityFramework Build Settings (Post-modification for Automatic Signing) ==="
+          echo "=== UnityFramework Build Settings (Using unmodified project settings from Unity build) ==="
           xcodebuild -project Unity-iPhone.xcodeproj -target UnityFramework -showBuildSettings | grep -E "(DEVELOPMENT_TEAM|CODE_SIGN|PROVISIONING_PROFILE)"
           
           # Build and archive with Automatic Signing
-          echo "Attempting to build and archive with Automatic Signing..."
+          echo "Attempting to build and archive with Automatic Signing (using committed project settings)..."
           xcodebuild -project Unity-iPhone.xcodeproj \
             -scheme Unity-iPhone \
             -configuration Release \
