--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,8 +38,8 @@ jobs:
         name: Install Provisioning Profile
         uses: apple-actions/download-provisioning-profiles@v1
         with:
-          bundle-id: ${{ secrets.IOS_BUNDLE_ID }}
-          profile-type: 'IOS_APP_STORE'
+          bundle-id: 'com.stash.sdkdemo'
+          profile-type: 'IOS_APP_DEVELOPMENT'
           issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
           api-key-id: ${{ secrets.APPSTORE_KEY_ID }}
           api-private-key: ${{ secrets.APPSTORE_PRIVATE_KEY }}
@@ -77,7 +77,7 @@ jobs:
             <key>method</key>
             <string>app-store</string>
             <key>teamID</key>
-            <string>DB5KZDZYT5</string>
+            <string>DC7Y8ZKSC8</string>
             <key>uploadBitcode</key>
             <false/>
             <key>uploadSymbols</key>
@@ -113,7 +113,7 @@ jobs:
             -configuration Release \
             -sdk iphoneos \
             -archivePath ./build/Unity-iPhone.xcarchive \
-            DEVELOPMENT_TEAM="DB5KZDZYT5" \
+            DEVELOPMENT_TEAM="DC7Y8ZKSC8" \
             CODE_SIGN_IDENTITY="Apple Development: Ondřej Řeháček (DC7Y8ZKSC8)" \
             archive
           
